@@ -1,0 +1,54 @@
+Subject	Encryption support moved outside init
+From	Dylan Araps &lt;dylan@k1ss.org&gt;
+Date	Wed, 11 May 2020 03:21:09 +0100
+
+Encryption support in the init scripts will be moved to an external
+project. Development will happen at a quicker pace and be done by
+members of the community (those who use encryption themselves).
+
+This change also allows me to step back from writing/maintaining this
+code. I don't personally use encryption (only on external drives) so
+it's been a little tricky for me to approve changes by the community,
+test changes, reproduce bugs, etc.
+
+Supporting encryption is trickier than one would think. There's a lot
+to support and hardly anyone supports the entire specification (most
+likely only systemd).
+
+The encryption code is now in good hands. The new maintainer really
+cares about the boot-up/shutdown process as a whole. A large number of
+improvements have come from his ideas (a lot of bug fixes too).
+
+What this entails as a user of encryption is fairly simple (though
+manual). Install the `kiss-encryption` package in a week's time when
+the update will be released.
+
+At the same time, the `baseinit` package will receive an update so be
+sure to update the system prior to installing the package.
+
+This manual process is why I have decided to delay the update and
+inform users beforehand. Apologies for the inconvenience.
+
+The `baseinit` update will also include some nice improvements to the
+boot up process. Messages from the boot process will now be logged
+to dmesg, the boot duration will be displayed at the end of the boot
+process ("Boot completed in 2s...") and a myriad of bug fixes.
+
+The source for the encryption code now lives here:
+
+https://github.com/illiliti/kiss-encryption
+
+
+Dylan
+
+
+
+
+
+
+
+
+
+
+
+
