@@ -8,6 +8,15 @@
 <ttl>1800</ttl>
 <atom:link href="https://k1ss.org/news/news.xml" rel="self" type="application/rss+xml"/>
 <item>
+<title>11/05/2020: Encryption support moved outside init</title>
+<description>Encryption support in the init scripts will be moved to an external
+project. Development will happen at a quicker pace and be done by
+members of the community (those who use encryption themselves).</description>
+<link>https://k1ss.org/news/20200511a</link>
+<guid isPermaLink="true">https://k1ss.org/news/20200511a/</guid>
+<pubDate>Mon, 11 May 2020 00:00:00 +0000</pubDate>
+</item>
+<item>
 <title>09/05/2020: GCC 10.1.0 kernel issue</title>
 <description>The kernel compiled with GCC 10.1.0 may crash on boot.</description>
 <link>https://k1ss.org/news/20200509a</link>
